syntax="proto3";

option java_multiple_files = false;
option java_outer_classname = "Friend";
option java_package = "net.sopod.soim.data.msg.friend";

package net.sopod.soim.data.msg.friend;

message ReqFriendSearch {
  string keyword = 1;
}
message ResFriendSearch {
  repeated UserInfo users = 8;
}
message UserInfo {
  int64 uid = 1;
  string account = 2;
  string nickname = 3;
}
